# TOSN_SOAP

./: README.md
code/: aisle.py  algorithms.py  main.py  test.py
cpp/: CMakeLists.txt  approximation_alg.cpp  approximation_alg.h  approximation_alg2.cpp  approximation_alg2.h  definitions.h  heuristic_gba.cpp  heuristic_gba.h  heuristic_gbt.cpp  heuristic_gbt.h  main.cpp  optimal_alg.cpp  optimal_alg.h  util.cpp  util.h
cpp/orchards/: o_m106_n137_l4_t0_s1110  o_m11_n15_l4_t0_s0  o_m3_n4_l4_t0_s1  o_m50_n25_l4_t0_s0  o_m50_n25_l4_t0_s2  o_m50_n25_l4_t0_s8
